Adds initial Gtk-doc support infrastructure for libnautilus-extension. 	(Progress towards bug #526193).
svn path=/trunk/; revision=14041

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2008-04-04  A. Walton  <awalton@svn.gnome.org>
+
+	* configure.in:
+	* docs/Makefile.am:
+	* docs/reference/Makefile.am:
+	* docs/reference/libnautilus-extension/Makefile.am:
+	* docs/reference/libnautilus-extension/libnautilus-extension-docs.xml:
+	* docs/reference/libnautilus-extension/libnautilus-extension.types:
+	* docs/reference/libnautilus-extension/version.xml.in:
+
+	Adds initial Gtk-doc support infrastructure for libnautilus-extension.
+	(Progress towards bug #526193).
+
 2008-04-04  Christian Neumair  <cneumair@gnome.org>
 
 	* src/nautilus-places-sidebar.c (nautilus_places_sidebar_init),
