--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-04-07  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-column-chooser.c (update_buttons),
+	(add_buttons):
+	Remove show/hide buttons. The entries can be toggled directly using
+	mouse or keyboard. Do not remove buttons to move entries, since
+	list DND may not be obvious for some users (#514394). Thanks to Marcin
+	Galazka.
+
 2008-04-05  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-autorun.c:
