Translation updated by Ivar Smolin
2008-04-07  Priit Laes  <plaes at svn dot gnome dot org>

	* et.po: Translation updated by Ivar Smolin

svn path=/trunk/; revision=14045

--- a/po/et.po
+++ b/po/et.po
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-29 20:58+0000\n"
-"PO-Revision-Date: 2008-03-12 07:41+0200\n"
+"PO-Revision-Date: 2008-04-06 11:57+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -2997,7 +2997,7 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-progress-info.c:222
 msgid "File operations"
-msgstr "Failioperatsioonis"
+msgstr "Failioperatsioonid"
 
 #: ../libnautilus-private/nautilus-progress-info.c:300
 #, c-format
