--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-07  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-04-01  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
         * zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
