--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-04-07  Christian Neumair  <cneumair@gnome.org>
+
+	* src/nautilus-application.c (nautilus_application_destroy),
+	(automount_all_volumes_idle_cb), (finish_startup):
+	* src/nautilus-application.h:
+	Automount volumes in idle callback rather than during startup
+	(#526471).
+
 2008-04-05  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-autorun.c:
