--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-07  Christian Neumair  <cneumair@gnome.org>
 
+	* NEWS:
+	Update for release.
+
+2008-04-07  Christian Neumair  <cneumair@gnome.org>
+
 	* src/nautilus-application.c (nautilus_application_destroy),
 	(automount_all_volumes_idle_cb), (finish_startup):
 	* src/nautilus-application.h:
