--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-04-08  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.22.2 ===
+
 2008-04-07  Christian Neumair  <cneumair@gnome.org>
 
 	* NEWS:
