Destroy column editor dialog with its parent list view. (#439097)
2008-04-08  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-list-view.c: (fm_list_view_finalize):
	Destroy column editor dialog with its parent list view. (#439097)

svn path=/branches/gnome-2-22/; revision=14052

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-08  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/file-manager/fm-list-view.c: (fm_list_view_finalize):
+	Destroy column editor dialog with its parent list view. (#439097) 
+
+2008-04-08  Martin Wehner  <martin.wehner@gmail.com>
+
 	* configure.in:
 	Post release version bump
 
