Destroy column editor dialog with its parent list view. (#439097)
2008-04-08  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-list-view.c: (fm_list_view_finalize):
	Destroy column editor dialog with its parent list view. (#439097)

svn path=/trunk/; revision=14053

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-08  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/file-manager/fm-list-view.c: (fm_list_view_finalize):
+	Destroy column editor dialog with its parent list view. (#439097) 
+
 2008-04-07  Christian Neumair  <cneumair@gnome.org>
 
 	* src/nautilus-application.c (nautilus_application_destroy),
