Add a missing comma to fix build with Autoconf 2.62. (#527315).
2008-04-10  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.in: Add a missing comma to fix build with
	Autoconf 2.62. (#527315).

svn path=/trunk/; revision=14054

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-10  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* configure.in: Add a missing comma to fix build with
+	Autoconf 2.62. (#527315).
+
 2008-04-08  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-list-view.c: (fm_list_view_finalize):
