Fix typo in Catalan translation.
svn path=/trunk/; revision=14056

--- a/po/ca.po
+++ b/po/ca.po
@@ -3109,7 +3109,7 @@ msgstr "Pregunta d'execució automàtica"
 msgid ""
 "Browse all local and remote disks and folders accessible from this computer"
 msgstr ""
-"Navegueu tots els discs i carpetes locals o remotes accessibles de d'aquest "
+"Navegueu tots els discs i carpetes locals o remotes accessibles des d'aquest "
 "ordinador"
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:1
