Fix typo in Catalan translation.
svn path=/branches/gnome-2-22/; revision=14057

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-10  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Fix typo in Catalan translation.
+
 === nautilus 2.22.2 ===
 
 2008-04-07  Priit Laes  <plaes at svn dot gnome dot org>
