New Valencian-Catalan translation, based on the current Catalan file.
svn path=/trunk/; revision=14058

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-10  Jordi Mallach  <jordi@sindominio.net>
 
+	* ca@valencia.po: New Valencian-Catalan translation, based on
+	the current Catalan file.
+
+2008-04-10  Jordi Mallach  <jordi@sindominio.net>
+
 	* ca.po: Fix typo in Catalan translation.
 
 2008-04-07  Priit Laes  <plaes at svn dot gnome dot org>
@@ -8,8 +13,8 @@
 
 2008-04-01  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
-        * zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
-        * zh_TW.po: Updated Traditional Chinese translation(Taiwan).
+	* zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
+	* zh_TW.po: Updated Traditional Chinese translation(Taiwan).
 
 2008-04-01  Claude Paroz  <claude@2xlibre.net>
 
@@ -97,7 +102,7 @@
 
 2008-03-08 Maxim Dziumanenko <dziumanenko@gmail.com>
 
-        * uk.po: Update Ukrainian translation.
+	* uk.po: Update Ukrainian translation.
 
 2008-03-08  Wadim Dziedzic  <wadimd@svn.gnome.org>
 
@@ -217,8 +222,8 @@
 
 2008-03-01  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
-        * zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
-        * zh_TW.po: Updated Traditional Chinese translation(Taiwan).
+	* zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
+	* zh_TW.po: Updated Traditional Chinese translation(Taiwan).
 
 2008-02-29  Priit Laes  <plaes at svn dot gnome dot org>
 
