New Valencian-Catalan translation, based on the current Catalan file.
svn path=/branches/gnome-2-22/; revision=14060

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-10  Jordi Mallach  <jordi@sindominio.net>
 
+	* ca@valencia.po: New Valencian-Catalan translation, based on
+	the current Catalan file.
+
+2008-04-10  Jordi Mallach  <jordi@sindominio.net>
+
 	* ca.po: Fix typo in Catalan translation.
 
 === nautilus 2.22.2 ===
