--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-04-10  A. Walton  <awalton@svn.gnome.org>
+
+	* src/Makefile.am:
+	* src/nautilus-application.c: (nautilus_application_startup):
+	* src/nautilus-application.h:
+	* src/nautilus-first-time-druid.c:
+	* src/nautilus-first-time-druid.h:
+	* src/nautilus-main.c: (main):
+	Remove the first-time-druid dead code (#520773).
+
 2008-04-10  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* configure.in: Add a missing comma to fix build with
