Remove GSequence directory and files (for real this time).
2008-04-10  A. Walton  <awalton@svn.gnome.org>
	Remove GSequence directory and files (for real this time).


svn path=/trunk/; revision=14064

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-04-10  A. Walton  <awalton@svn.gnome.org>
 
+	Remove GSequence directory and files (for real this time).
+
+2008-04-10  A. Walton  <awalton@svn.gnome.org>
+
 	* configure.in:
 	* cut-n-paste-code/Makefile.am:
 	* cut-n-paste-code/gsequence/Makefile.am:
