--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-11  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2008-04-10  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca@valencia.po: New Valencian-Catalan translation, based on
