--- a/po/ka.po
+++ b/po/ka.po
@@ -17,8 +17,6 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0\n"
 "X-Generator: KBabel 1.11.4\n"
 "X-Rosetta-Export-Date: 2007-06-29 21:08:16+0000\n"
-"X-Poedit-Language: Georgian\n"
-"X-Poedit-Country: GEORGIA\n"
 
 #: ../data/browser.xml.h:1
 msgid "Apparition"
@@ -1446,25 +1444,25 @@ msgstr "სხვა ბმული %s -ზე"
 #: ../libnautilus-private/nautilus-file-operations.c:278
 #, c-format
 msgid "%'dst link to %s"
-msgstr "%s ის მე %'d ბმული"
+msgstr "მე %'d ბმული %s-ზე"
 
 #. appended to new link file
 #: ../libnautilus-private/nautilus-file-operations.c:282
 #, c-format
 msgid "%'dnd link to %s"
-msgstr "%s-ის მე-%'d ბმული"
+msgstr "მე-%'d ბმული %s-ზე"
 
 #. appended to new link file
 #: ../libnautilus-private/nautilus-file-operations.c:286
 #, c-format
 msgid "%'drd link to %s"
-msgstr "%s-ის მე-%'d ბმული"
+msgstr "მე-%'d ბმული %s-ზე"
 
 #. appended to new link file
 #: ../libnautilus-private/nautilus-file-operations.c:290
 #, c-format
 msgid "%'dth link to %s"
-msgstr "%s-ის მე-%'d ბმული"
+msgstr "მე-%'d ბმული %s-ზე"
 
 #. Localizers:
 #. * Feel free to leave out the st, nd, rd and th suffix or
