--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-13  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation, fixes bug #526626
+
 2008-04-11  Marcel Telka  <marcel@telka.sk>
 
 	* POTFILES.in: Updated.
