Updated Spanish translation, fixes bug #526626
svn path=/branches/gnome-2-22/; revision=14070

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-13  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation, fixes bug #526626
+
 2008-04-10  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca@valencia.po: New Valencian-Catalan translation, based on
