Added partial Ido (io) translation
svn path=/trunk/; revision=14071

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-14  Michael Terry  <mike@mterry.name>
+
+	* io.po: Added partial Ido translation.
+
 2008-04-13  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation, fixes bug #526626
