--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-19  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2008-04-14  Michael Terry  <mike@mterry.name>
 
 	* io.po: Added partial Ido translation.
