--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-21  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2008-04-19  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
