Support new gnome-session autostart semantics (#525056). Thanks to Lucas
2008-04-21  Christian Neumair  <cneumair@gnome.org>

	* nautilus.desktop.in.in:
	* src/nautilus-main.c (main):
	Support new gnome-session autostart semantics (#525056). Thanks to
	Lucas Rocha.

svn path=/trunk/; revision=14077

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-04-21  Christian Neumair  <cneumair@gnome.org>
+
+	* nautilus.desktop.in.in:
+	* src/nautilus-main.c (main):
+	Support new gnome-session autostart semantics (#525056). Thanks to
+	Lucas Rocha.
+
 2008-04-15  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-file.c: (compare_by_time):
