Update for release.
2008-04-21  Christian Neumair  <cneumair@gnome.org>

	* NEWS:
	Update for release.

svn path=/trunk/; revision=14078

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-21  Christian Neumair  <cneumair@gnome.org>
 
+	* NEWS:
+	Update for release.
+
+2008-04-21  Christian Neumair  <cneumair@gnome.org>
+
 	* nautilus.desktop.in.in:
 	* src/nautilus-main.c (main):
 	Support new gnome-session autostart semantics (#525056). Thanks to
