--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Major changes in 2.23.1 are:
+* Support new gnome-session autostart semantics.
+* Unify session save/restore routines with "--restart" and "--load-session"
+* Allow to invert selection
+* Do not automount mount points inside hidden hierarchies
+* Add NautilusFileInfo APIs: can_write(), get_mount(), get_parent_info()
+* Add initial Gtk-doc support.
+* Remove some dead code.
+
 Major changes in 2.22.1 are:
 * Fix crashes and leaks
 * Fix emblem display in property page
