Entirely move DISTCHECK_CONFIGURE_FLAGS to Makefile.am to fix distcheck.
2008-04-21  Christian Neumair  <cneumair@gnome.org>

	* Makefile.am:
	* configure.in:
	Entirely move DISTCHECK_CONFIGURE_FLAGS to Makefile.am to fix
	distcheck.

svn path=/trunk/; revision=14079

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-04-21  Christian Neumair  <cneumair@gnome.org>
 
+	* Makefile.am:
+	* configure.in:
+	Entirely move DISTCHECK_CONFIGURE_FLAGS to Makefile.am to fix
+	distcheck.
+
+2008-04-21  Christian Neumair  <cneumair@gnome.org>
+
 	* NEWS:
 	Update for release.
 
