--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-04-21  Christian Neumair  <cneumair@gnome.org>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.23.1 ===
+
+2008-04-21  Christian Neumair  <cneumair@gnome.org>
+
 	* Makefile.am:
 	* configure.in:
 	Entirely move DISTCHECK_CONFIGURE_FLAGS to Makefile.am to fix
