--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-23  Michael J. Chudobiak  <mjc@svn.gnome.org>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	* libnautilus-private/nautilus-global-preferences.c:
+	Bump default thumbnailing size limit from 5 MB to 10 MB (#421342).
+
 2008-04-21  Christian Neumair  <cneumair@gnome.org>
 
 	* configure.in:
