Properly handle Ctrl+F10 keybinding in List View. Patch by Paweł Paprota.
2008-04-24  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/file-manager/fm-list-view.c: (key_press_callback):
	Properly handle Ctrl+F10 keybinding in List View.
	Patch by Paweł Paprota. (#385896).

svn path=/trunk/; revision=14088

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-24  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/file-manager/fm-list-view.c: (key_press_callback):
+	Properly handle Ctrl+F10 keybinding in List View.
+	Patch by Paweł Paprota. (#385896).
+
 2008-04-23  Michael J. Chudobiak  <mjc@svn.gnome.org>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
