--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-24  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/file-manager/fm-list-view.c: (key_press_callback):
+	Properly handle Ctrl+F10 keybinding in List View.
+	Patch by Paweł Paprota. (#385896).
+
 2008-04-15  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-file.c: (compare_by_time):
