2008-04-24 Jovan Naumovski <jovanna@svn.gnome.org> *mk.po: Updated Macedonian translation.
svn path=/branches/gnome-2-22/; revision=14090

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-24  Jovan Naumovski  <jovan@lugola.net>
+
+	* mk.po: Fixed some typos in Macedonian translation.
+
 2008-04-23  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
