Do not activate twice if the activated paths are already selected. Always
2008-04-27  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-list-view.c (button_press_callback):
	Do not activate twice if the activated paths are already selected.
	Always expand when an expander is clicked, even when the activation
	paths are already selected. Add 4 to the GtkTreeView's claimed
	expander size, which accounts for hard coded internal GtkTreeView
	expander padding. Fixes #448562. Thanks to Paweł Paprota.

svn path=/branches/gnome-2-22/; revision=14096

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2008-04-27  Christian Neumair  <cneumair@gnome.org>
 
+	* src/file-manager/fm-list-view.c (button_press_callback):
+	Do not activate twice if the activated paths are already selected.
+	Always expand when an expander is clicked, even when the activation
+	paths are already selected. Add 4 to the GtkTreeView's claimed
+	expander size, which accounts for hard coded internal GtkTreeView
+	expander padding. Fixes #448562. Thanks to Paweł Paprota.
+
+2008-04-27  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-icon-container.c
 	(emit_atk_focus_tracker_notify), (set_keyboard_focus),
 	(select_range), (select_one_unselect_others), (rubberband_select),
