Always use single click policy in the Places sidebar. (#355760).
2008-04-27  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/nautilus-places-sidebar.c: (nautilus_places_sidebar_init):
	Always use single click policy in the Places sidebar. (#355760).

svn path=/trunk/; revision=14102

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-27  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* src/nautilus-places-sidebar.c: (nautilus_places_sidebar_init):
+	Always use single click policy in the Places sidebar. (#355760).
+
+2008-04-27  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* src/nautilus-navigation-window.c:
 	(nautilus_navigation_window_save_geometry):
 	Always properly remember window size, also in the case the window is
