Quote schema. Fixes #522029.
2008-04-27  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-manage-views.c
	(display_view_selection_failure):
	Quote schema. Fixes #522029.

svn path=/trunk/; revision=14104

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-27  Christian Neumair  <cneumair@gnome.org>
+
+	* src/nautilus-window-manage-views.c
+	(display_view_selection_failure):
+	Quote schema. Fixes #522029.
+
 2008-04-27  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/nautilus-places-sidebar.c: (nautilus_places_sidebar_init):
