Updated Occitan translation
svn path=/trunk/; revision=14109

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-29  Yannig Marchegay <yannig@marchegay.org>
+
+	* oc.po: Updated Occitan translation.
+
 2008-04-24  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
