Remove false dependency for ESound. Closes bug #311445.
2008-04-30  A. Walton  <awalton@gnome.org>

	* configure.in:
	* src/file-manager/fm-icon-view.c:
	Remove false dependency for ESound. Closes bug #311445.


svn path=/trunk/; revision=14115

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-04-30  A. Walton  <awalton@gnome.org>
 
+	* configure.in:
+	* src/file-manager/fm-icon-view.c:
+	Remove false dependency for ESound. Closes bug #311445.
+
+2008-04-30  A. Walton  <awalton@gnome.org>
+
 	* libnautilus-private/nautilus-clipboard.c:
 	* libnautilus-private/nautilus-directory-async.c:
 	* libnautilus-private/nautilus-directory.c:
