Remove false dependency for ESound. Closes bug #311445.
2008-04-30  A. Walton  <awalton@gnome.org>

	* configure.in:
	* src/file-manager/fm-icon-view.c:
	Remove false dependency for ESound. Closes bug #311445.


svn path=/branches/gnome-2-22/; revision=14116

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-30  A. Walton  <awalton@gnome.org>
+
+	* configure.in:
+	* src/file-manager/fm-icon-view.c:
+	Remove false dependency for ESound. Closes bug #311445.
+
 2008-04-29  David Zeuthen  <davidz@redhat.com>
 
 	* libnautilus-private/nautilus-autorun.c:
