Updated Spanish translation
svn path=/trunk/; revision=14119

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-30  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2008-04-30  Andre Klapper  <a9016009@gmx.de>
 
 	* LINGUAS:
