Removed duplicate "and" in description. Fixes #516906.
2008-05-01  Claude Paroz  <claude@2xlibre.net>

	* libnautilus-private/apps_nautilus_preferences.schemas.in: Removed
	duplicate "and" in description. Fixes #516906.

svn path=/trunk/; revision=14123

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-01  Claude Paroz  <claude@2xlibre.net>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in: Removed
+	duplicate "and" in description. Fixes #516906.
+
 2008-04-30  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/nautilus-property-browser.c: (ensure_file_is_image):
