Reverted last update of Occitan translation, it was breaking the build.
2008-05-02  Cosimo Cecchi  <cosimoc@gnome.org>

	* oc.po: Reverted last update of Occitan translation, it was
	breaking the build. (#530970).

svn path=/trunk/; revision=14126

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-02  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* oc.po: Reverted last update of Occitan translation, it was
+	breaking the build. (#530970).
+
 2008-04-30  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation
