Updated Spanish translation
svn path=/trunk/; revision=14127

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-03  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2008-05-02  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* oc.po: Reverted last update of Occitan translation, it was
