--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-03  Christian Neumair  <cneumair@gnome.org>
+
+	* src/nautilus-file-management-properties.glade:
+	Use 12 pixels of list column page indentation. Fixes #514415. Thanks
+	to Marcin Galazka.
+
 2008-05-01  Claude Paroz  <claude@2xlibre.net>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in: Removed
