--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-03  Hans Petter Jansson  <hpj@novell.com>
+
+	* src/nautilus-image-properties-page.c (append_exifdata_string):
+	If we get a NULL exifdata, don't try to dereference it. Fixes
+	BGO #530851.
+
 2008-05-03  Christian Neumair  <cneumair@gnome.org>
 
 	* src/nautilus-file-management-properties.glade:
