Don't allow recursive move/copy into itself. Fixes #530720.
2008-05-05  Tomas Bzatek  <tbzatek@redhat.com> 

        * libnautilus-private/nautilus-file-operations.c:
        Don't allow recursive move/copy into itself. Fixes #530720.


svn path=/trunk/; revision=14131

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-05  Tomas Bzatek  <tbzatek@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c:
+	Don't allow recursive move/copy into itself. Fixes #530720.
+
 2008-05-03  Hans Petter Jansson  <hpj@novell.com>
 
 	* src/nautilus-image-properties-page.c (append_exifdata_string):
