Do not error out if the remote share is already mounted. Fixes #531508.
2008-05-05  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-connect-server-dialog-main.c:
	Do not error out if the remote share is already mounted.
	Fixes #531508.


svn path=/trunk/; revision=14132

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-05  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/nautilus-connect-server-dialog-main.c:
+	Do not error out if the remote share is already mounted.
+	Fixes #531508.
+
 2008-05-05  Tomas Bzatek  <tbzatek@redhat.com>
 
 	* libnautilus-private/nautilus-file-operations.c:
