Do not error out if the remote share is already mounted. Fixes #531508.
2008-05-05  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-connect-server-dialog-main.c:
	Do not error out if the remote share is already mounted.
	Fixes #531508.


svn path=/branches/gnome-2-22/; revision=14133

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-05  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/nautilus-connect-server-dialog-main.c:
+	Do not error out if the remote share is already mounted.
+	Fixes #531508.
+
 2008-05-03  Hans Petter Jansson  <hpj@novell.com>
 
 	* src/nautilus-image-properties-page.c (append_exifdata_string):
