Revert the patch for bug #314431 as it seems to break cut and paste.
2008-05-05  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/nautilus-window.c: (nautilus_window_key_press_event):
	Revert the patch for bug #314431 as it seems to break cut and paste.

svn path=/trunk/; revision=14134

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-05  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/nautilus-window.c: (nautilus_window_key_press_event):
+	Revert the patch for bug #314431 as it seems to break cut and paste.
+
 2008-05-05  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/nautilus-connect-server-dialog-main.c:
